[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# FIXME: https://github.com/servo/servo/issues/18044
xcb = {git = "https://github.com/rtbo/rust-xcb", rev = "lifetimes"}

# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
